Bug 1123777: Have SIMD shifts + splat + with functions apply ToInt32 to their scalar arguments; r=till